@@ -28,6 +28,8 @@ nbody 0.80:
 	- Slightly reduced memory usage of cells
 	- Fixed annoying creation of empty output files at beginning
 	- Last checkpoint is now deleted by default on completion
+	- Added 'make bench' simple benchmark
+	- Setting NBODY_FLAGS environment variable will pass extra flags to tests/benchmark
 
 
 separation 0.80:
